# dbt-forge

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RUFF_FIXES.md  conftest.py  pyproject.toml  tox.ini
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
dbt/dbt_forge/: dbt_project.yml
dbt/dbt_forge/macros/core/: dispatch_template.sql  emit_file.sql  generate_model.sql  resolve_source.sql
dbt/dbt_forge/macros/schema/: build_schema_yml.sql
dbt/dbt_forge/macros/templates/: render_aggregation_select.sql  render_base_select.sql  render_ctes_select.sql  render_distinct_select.sql  render_filtered_select.sql  render_full_select.sql  render_sorted_select.sql  render_thresholds_select.sql
dbt/dbt_forge/macros/utils/: format_columns.sql  format_filters.sql  format_metrics.sql  format_sort.sql
docs/: DSL.md  EXTENDING.md  TEMPLATES.md
examples/jaffle_shop/: README.md  dbt_project.yml  packages.yml  profiles.yml
examples/jaffle_shop/config/: models.yml
examples/jaffle_shop/models/: sources.yml
examples/jaffle_shop/seeds/: customers.csv  orders.csv
src/dbt_forge_cli/: __init__.py  cli.py  config.py  lineage.py  runner.py
src/dbt_forge_cli/validators/: __init__.py  business_rules.py
tests/: jinja_harness.py  render_smoke.py
tests/integration/: test_end_to_end.py
tests/unit/: test_business_rules.py  test_config.py  test_lineage.py  test_renders.py  test_runner_parser.py
