[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dbt-forge"
version = "0.1.0"
description = "Config-driven dbt model generator: composable, testable, dbt-native."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "dbt-forge contributors" }]
keywords = ["dbt", "data", "sql", "yaml", "code-generation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "pydantic>=2.13.4,<3",
    "pyyaml>=6.0.3",
    "click>=8.4.1",
    "rich>=15.0.0",
]

[project.optional-dependencies]
# Static analysis & formatting
lint = [
    "ruff>=0.6",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

# Test runner — `pip install -e ".[test]"`
test = [
    "pytest>=8",
    "pytest-cov>=5",
    "jinja2>=3.1",          # used by tests/jinja_harness.py
]

# Integration tests against a real dbt — heavier deps, separate extra
integration = [
    "dbt-core>=1.7,<2.0",
    "dbt-duckdb>=1.7",
]

# Convenience meta-extra for contributors
dev = [
    "dbt-forge[lint,test,integration]",
    "pre-commit>=3.7",
    "build>=1.2",
]

[project.scripts]
dbt-forge = "dbt_forge_cli.cli:main"

[project.urls]
Homepage = "https://github.com/robertoNdams/dbt-forge"
Repository = "https://github.com/robertoNdams/dbt-forge"
Issues = "https://github.com/robertoNdams/dbt-forge/issues"
Changelog = "https://github.com/robertoNdams/dbt-forge/blob/main/CHANGELOG.md"

# ---------------------------------------------------------------------------
# Build
# ---------------------------------------------------------------------------

[tool.hatch.build.targets.wheel]
packages = ["src/dbt_forge_cli"]

[tool.hatch.build.targets.sdist]
# Ship the dbt package alongside the Python source so users can install both
# via `git+https://...#subdirectory=dbt` or by cloning the sdist.
include = [
    "src/",
    "dbt/",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

# ---------------------------------------------------------------------------
# Ruff (lint + format)
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "PIE",    # flake8-pie
    "RET",    # flake8-return
    "PTH",    # flake8-use-pathlib
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # function calls in argument defaults — false positives with Click
]

[tool.ruff.lint.per-file-ignores]
# Tests use `pytest.importorskip(...)` followed by imports of the modules
# whose dependencies were just verified. Some ruff versions special-case
# this pattern, others don't — we allow E402 globally in tests/ to be safe.
"tests/**" = ["B011", "E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.10"
files = ["src/dbt_forge_cli"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_decorators = false   # Click's decorators are dynamically typed

[[tool.mypy.overrides]]
module = ["yaml", "rich.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: end-to-end tests that invoke real dbt (requires dbt-duckdb)",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------

[tool.coverage.run]
source = ["src/dbt_forge_cli"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false
